Trying to fix stupid white space on the right side

--- a/stylesBlog.css
+++ b/stylesBlog.css
@@ -287,9 +287,6 @@ margin-top:8%;
     margin-top:8%;
 }
 
-@media(max-width:1000px){
-    
-    
 .Main-Blog{
     width:100%;
 }
@@ -330,7 +327,24 @@ margin-top:8%;
 margin-top:5%;
 }
 
+
+
+@media(max-width:700px){
+
+    .Card-Rows{
+        width: 100%;
+    }
+    .Column-Cards{
+        margin-left: 7%;
+        display:flex;
+        flex-flow: row;
+    
+    }
+
 }
+
+/* Williams CSS for Media */
+
 
 
     @media(max-width:500px){
